charts/echo-kustomize/http_echo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-echo-vs
  labels:
    app.kubernetes.io/name: http-echo-vs
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: virtual-service
    app.kubernetes.io/part-of: http-echo
spec:
  hosts:
    - "http-echo.dev.local"
  gateways:
    - default/app-gateway
  http:
    - name: http-echo-route
      match:
        - port: 80
        - port: 443
      route:
        - destination:
            port:
              number: 8081
            host: http-echo-service.default.svc.cluster.local
...
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  labels:
    app.kubernetes.io/name: http-echo-service
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: http-echo
spec:
  selector:
    app.kubernetes.io/name: http-echo-pod
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: pod
  ports:
    - name: "http-echo-service-port"
      protocol: TCP
      port: 8081
      targetPort: "http-echo-port"
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deployment
  labels:
    app.kubernetes.io/name: http-echo-deployment
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: deployment
    app.kubernetes.io/part-of: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: http-echo-pod
      app.kubernetes.io/version: v1
      app.kubernetes.io/component: pod
      app.kubernetes.io/part-of: http-echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-echo-pod
        app.kubernetes.io/version: v1
        app.kubernetes.io/component: pod
        app.kubernetes.io/part-of: http-echo
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: http-echo-sa
      containers:
        - name: http-echo-container
          imagePullPolicy: IfNotPresent
          image: kicbase/echo-server:1.0
          ports:
            - name: http-echo-port
              containerPort: 8080
...
