charts/echo-kustomize/tcp_echo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-echo-vs
  labels:
    app.kubernetes.io/name: tcp-echo-vs
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: virtual-service
    app.kubernetes.io/part-of: tcp-echo
spec:
  hosts:
    - "tcp-echo.dev.local"
  gateways:
    - default/app-gateway
  tcp:
    - match:
        - port: 2702
        - port: 2703
      route:
        - destination:
            port:
              number: 2702
            host: tcp-echo-service.default.svc.cluster.local
...
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-service
  labels:
    app.kubernetes.io/name: tcp-echo-service
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: tcp-echo
spec:
  selector:
    app.kubernetes.io/name: tcp-echo-pod
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: pod
  ports:
    - name: "tcp-echo-service-port"
      protocol: TCP
      port: 2702
      targetPort: "tcp-echo-port"
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-deployment
  labels:
    app.kubernetes.io/name: tcp-echo-deployment
    app.kubernetes.io/version: v1
    app.kubernetes.io/component: deployment
    app.kubernetes.io/part-of: tcp-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tcp-echo-pod
      app.kubernetes.io/version: v1
      app.kubernetes.io/component: pod
      app.kubernetes.io/part-of: tcp-echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tcp-echo-pod
        app.kubernetes.io/version: v1
        app.kubernetes.io/component: pod
        app.kubernetes.io/part-of: tcp-echo
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: tcp-echo-sa
      containers:
        - name: tcp-echo-container
          image: cjimti/go-echo:latest
          ports:
            - name: tcp-echo-port
              containerPort: 2701
...
